--- a/src/aricc_demo/rcwork2015/aricc_rcwork_task/config/location.yaml
+++ b/src/aricc_demo/rcwork2015/aricc_rcwork_task/config/location.yaml
@@ -4,40 +4,40 @@ locations:
 
 ##################################WAYPOINTS#################################
 
-#  - {place: 'Workstation 11', x: '0.1706',  y: '-2.8907',  z: '0', dir: 'NORTH', align: '0.08', height: '0.05'}
-#  - {place: 'Waypoint 14', x: '0.03739',  y: '-1.561',  z: '0', dir: 'NORTH', align: '0.1', height: '0.05'}
-#  - {place: 'Rotating Table', x: '-0.099745', y: '-0.74258',  z: '0', dir: 'NORTH', align: '0.1', height: '0.05'}
-#  - {place: 'Waypoint 4', x: '-1.351', y: '-0.832',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 5', x: '-2.1496', y: '-3.5142',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 6',  x: '-2.7629', y: '-3.3772', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 7', x: '-1.5012', y: '-2.6127', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 15', x: '-0.7042', y: '-0.84151', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Workstation 6', x: '-0.64818',  y: '-1.458',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 10', x: '-2.1496', y: '-3.5142',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 11', x: '-2.1496', y: '-3.5142',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 12', x: '-0.546', y: '-2.795',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 13', x: '-1.5012', y: '-2.6127',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 14', x: '-0.693', y: '-1.276',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
-#  - {place: 'Waypoint 15', x: '-0.546', y: '-2.795',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 1', x: '-0.41325',  y: '-0.89213',  z: '0', dir: 'NORTH', align: '0.08', height: '0.05'}
+  - {place: 'Waypoint 2', x: '-3.2108',  y: '-2.0983',  z: '0', dir: 'NORTH', align: '0.1', height: '0.05'}
+  - {place: 'Waypoint 3', x: '-2.1204', y: '-1.9432',  z: '0', dir: 'NORTH', align: '0.1', height: '0.05'}
+  - {place: 'Waypoint 4', x: '-1.5434', y: '-2.2494',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 5', x: '-1.2413', y: '-1.7504',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 6',  x: '-3.2346', y: '-1.3018', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 7', x: '-0.65851', y: '-1.6706', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 8', x: '0.30842', y: '-2.807', z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 9', x: '-0.4445',  y: '-3.5184',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 10', x: '-0.93565', y: '-1.3037',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 11', x: '-0.27459', y: '-1.9873',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 12', x: '-1.0018', y: '-3.5781',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 13', x: '-1.796', y: '-3.5781',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 14', x: '-3.0603', y: '-2.8764',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
+  - {place: 'Waypoint 15', x: '-0.85874', y: '-2.117',  z: '0', dir: 'NORTH', align: '0.075', height: '0.05'}
 
 ############################WORKSTATIONS###############################
 
-  - {place: 'Workstation 1', x: '-0.5068',  y: '-1.1298',  z: '0', dir: 'NORTH', align: '-1', height: '0.10'}
-  - {place: 'Workstaton 2', x: '0.4486', y: '-2.8509',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
+  - {place: 'Workstation 1', x: '-0.5068',  y: '-1.1298',  z: '0', dir: 'NORTH', align: '0.075', height: '0.10'}
+  - {place: 'Workstation 2', x: '0.4486', y: '-2.8509',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
   - {place: 'Workstation 3', x: '-0.52991',  y: '3.5789',  z: '0', dir: 'WEST', align: '0.075', height: '0.10'}
   - {place: 'Workstation 4', x: '0.8554', y: '-2.0659',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
-  - {place: 'Worktation 5', x: '-1.5988',  y: '-1.6497',  z: '0', dir: 'WEST', align: '0.075', height: '0.05'}
+  - {place: 'Workstation 5', x: '-1.5988',  y: '-1.6497',  z: '0', dir: 'WEST', align: '0.075', height: '0.05'}
   - {place: 'Workstation 6', x: '-1.4876', y: '-2.9111',  z: '0', dir: 'SOUTH', align: '0.075', height: '0.10'}
   - {place: 'Workstation 7', x: '-0.52991',  y: '3.5789',  z: '0', dir: 'WEST', align: '0.075', height: '0.10'}
-  - {place: 'Workstation 8', x: '-0.5068',  y: '-1.1298',  z: '0', dir: 'NORTH', align: '-1', height: '0.10'}
+  - {place: 'Workstation 8', x: '-0.5068',  y: '-1.1298',  z: '0', dir: 'NORTH', align: '0.075', height: '0.10'}
   - {place: 'Workstation 9', x: '-1.4876', y: '-2.9111',  z: '0', dir: 'SOUTH', align: '0.075', height: '0.10'}
-  - {place: 'Worktation 10', x: '-1.5988',  y: '-1.6497',  z: '0', dir: 'WEST', align: '0.075', height: '0.05'}
-  - {place: 'Workstaton 11', x: '0.4486', y: '-2.8509',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
-  - {place: 'Workstation 12', x: '0.8554', y: '-2.0659',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
+  - {place: 'Workstation 10', x: '-1.5988',  y: '-1.6497',  z: '0', dir: 'WEST', align: '0.075', height: '0.05'}
+  - {place: 'Workstation 11', x: '0.4486', y: '-2.8509',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
+  - {place: 'Workstation 12', x: '-0.8554', y: '-2.0659',  z: '0', dir: 'EAST', align: '0.075', height: '0.10'}
 
-  - {place: 'Rotating Table', x: '-1.2883',  y: '-3.6427',  z: '0', dir: 'SOUTH', align: '0.075', height: '0.10'}
-  - {place: 'Conveyor Belt', x: '-3.3989',  y: '-2.5598',  z: '0', dir: 'SOUTH', align: '0.075', height: '0.10'}
+  - {place: 'Rotating Table', x: '-1.2883',  y: '-3.6427',  z: '0', dir: 'SOUTH', align: '-1', height: '0.10'}
+  - {place: 'Conveyor Belt', x: '-3.3989',  y: '-2.5598',  z: '0', dir: 'SOUTH', align: '-1', height: '0.10'}
   - {place: 'Robot', x: '-1.5719',  y: '-3.4815',  z: '0', dir: 'NORTH', align: '0.075', height: '0.0'}
-  - {place: 'Precision Placement', x: '-0.37035',  y: '-1.9695',  z: '0', dir: 'NORTH', align: '0.075', height: '0.10'}
+  - {place: 'Precision Platform', x: '-0.37035',  y: '-1.9695',  z: '0', dir: 'NORTH', align: '0.075', height: '0.10'}
 
   - {place: 'Exit', x: '-3.1708', y: '-2.4832',  z: '0', dir: 'WEST', align: '0.075', height: '0.0'}
